Web Inspector: Prevent deadlocks receiving WIRPermissionDenied message https://bugs.webkit.org/show_bug.cgi?id=131406

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-04-08
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.h:
* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::stop):
(Inspector::RemoteInspector::stopInternal):
(Inspector::RemoteInspector::xpcConnectionReceivedMessage):
Provide a way to stop externally and a path to stop when in
the middle of handling a message already with the locked mutex.

* inspector/remote/RemoteInspectorXPCConnection.h:
* inspector/remote/RemoteInspectorXPCConnection.mm:
(Inspector::RemoteInspectorXPCConnection::close):
(Inspector::RemoteInspectorXPCConnection::closeFromMessage):
Provide a way to close externally and a path to close when in
the middle of handling a message already with a mutex.

Canonical link: https://commits.webkit.org/149467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166982 268f45cc-cd09-0410-ab3c-d52691b4dbfc